# deconwolf-gui

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  TODO.md  deb_make.sh  dw_app.c  dw_app.h  dw_app_get_new_channel.c  dw_app_get_new_scope.c  dw_app_runner.c  dw_app_runner_simple.c  dw_app_window.c  dw_app_window.h  dw_channel.c  dw_gui.c  dw_scope.c  gresources.xml  makefile  meson.build
resources/: deconwolf.desktop
src/: common.c  common.h  create_dwgui_installer.nsi  dw_app.c  dw_app.h  dw_app_runner.c  dw_app_runner_simple.c  dw_app_window.c  dw_app_window.h  dw_channel.c  dw_channel.h  dw_colors.c  dw_colors.h  dw_colors_ut.c  dw_conf.c  dw_conf.h  dw_file.c  dw_file.h  dw_gui.c  dw_scope.c  dw_scope.h  gresources.xml  meson.build  version.h
tests/: README.md  gen_valid_file_names.py
